@@ -158,6 +158,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
+            WARNING: A Java agent has been loaded dynamically (/Users/hanl5/.m2/repository/net/bytebuddy/byte-buddy-agent/1.14.18/byte-buddy-agent-1.14.18.jar)
+            WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+            WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+            WARNING: Dynamic loading of agents will be disallowed by default in a future release
+            OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
+            -->
+            <plugin>
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
